--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<meta property="og:site_name" content="Hanyu Gong">
     <link rel = "Shortcut Icon" href="https://hanyu-gong.com/pictures/webicon.ico"> 
 	<link rel="manifest" href="site.webmanifest">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://hanyu-gong.com/style.css">
 	<link rel="canonical" href="https://hanyu-gong.com">
     <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -184,7 +184,7 @@
     </div>
     
     
-	<script src="./scripts.js"></script>
+	<script src="https://hanyu-gong.com/scripts.js"></script>
 	<script>
 		window.ga = function(){ ga.q.push(arguments)}; ga.q = []; ga.l = +new Date;
 		ga('create', 'UA-63673806-1', 'auto'); ga('send', 'pageview')
