--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 						</a>
 					</li>
 					<li class="resume">
-						<a class="active" href="https://hanyu-gong.com/resume.pdf">resume</a>
+						<a class="active" href="./resume.pdf" target="_blank">resume</a>
 					</li>
 				</ul>
 			</nav>
@@ -174,6 +174,7 @@
                        <a href=""> <i class="fa fa-facebook-square" style="font-size:24px"></i></a></li>
 					</ul>
 				</section>
+                
 
 				<button class="arrow">
 					<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 36"><title>Top</title><path d="M11 6.3l-5-5-5 5m5-4.9v34"></path></svg>
