--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
     <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./style.css">
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-90118229-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-90118229-2');
+</script>
+
 </head>
     
 <!--main page-->
@@ -69,9 +78,7 @@
 					<li>
 						<a class="about" href="">
 							<svg version="1.1" width="2em" height="2em">
-								<title>About</title>
-								<line y1="1em" x2="2em" y2="1em"></line>
-								<line x1="1em" x2="1em" y2="2em"></line>
+							<title>About</title>
 								<circle cx="1em" cy="1em" r=".5em"></circle>
                                 <circle cx="1em" cy="1em" r=".2em"></circle>
                                 <text aria-label="about"></text>
@@ -91,7 +98,10 @@
 					<li class="project portrait digital loaded" style="position: absolute; left: 0px; top: 0px;">
 						<a href="https://hanyu-gong.com">
 							<article>
-								<h2 class="title"><span data-text="frogdesign">Intern @ frog</span></h2>
+								<h2 class="title" >
+                                    <span data-text="frogdesign" style="color:#77D84A;">
+                                      #Internship <br><br> #Experience Design <br><br> #Life at frog</span>
+                                </h2>
                                 <img class="thumb frog" src="https://hanyu-gong.com/pictures/friedolin_GW.png">
 							</article>
 						</a>
@@ -99,7 +109,8 @@
 					<li class="project landscape digital clicked loaded" style="position: absolute; left: 297px; top: 0px;">
 						<a href="projects/challenge.html">
 							<article>
-								<h2 class="title"><span data-text="designchallenge">Reserve a Rehearsal Space</span></h2>
+								<h2 class="title"><span data-text="designchallenge"style="color:#FECA07;" >
+                                    #UX<br><br>#Design Challenge<br><br>#Reservation system<br><br>#Desktop </span></h2>
 								<img class="thumb challenge" src="https://hanyu-gong.com/pictures/challenge.png" >
 							</article>
 						</a>
@@ -107,7 +118,8 @@
 					<li class="project landscape digital loaded" style="position: absolute; left: 297px; top: 208px;">
 						<a href="http://www.hanyu-gong.space/starbucks">
 							<article>
-								<h2 class="title"><span data-text="starbucks">EasyOrder at Starbucks</span></h2>
+								<h2 class="title"><span data-text="starbucks" style="color:#09B458;">
+                                    #UX/CX  <br><br> #Starbuck Experience <br><br> #Kiosk </span></h2>
 								<img class="thumb starbucks" src="https://hanyu-gong.com/pictures/starbucks.png">
 							</article>
 						</a>
@@ -116,7 +128,8 @@
 					<li class="project landscape identity digital loaded" style="position: absolute; left: 297px; top: 417px;">
 						<a >
 							<article>
-								<h2 class="title"><span data-text="plantism">Keep Plants Healthy</span></h2>
+								<h2 class="title"><span data-text="plantism" style="color:#68D4D5;">
+                                    #UX <br><br> #IOT <br><br> #Mobile <br><br> #Plants Management</span></h2>
                                 <img class="thumb plantism" src="https://hanyu-gong.com/pictures/plantism.png">
 							</article>
 						</a>
@@ -124,7 +137,8 @@
 					<li class="project portrait digital loaded" style="position: absolute; left: 0px; top: 417px;">
 						<a href="http://www.hanyu-gong.space/tezignstartuptoolkit">
 							<article>
-								<h2 class="title"><span data-text="tezign">Startup VI Toolkit</span></h2>
+								<h2 class="title"><span data-text="tezign" style="color:#34E7C8;">
+                                    #Internship <br><br> #UX<br><br> #To-Business <br><br> #Mobile <br><br> #Tezign</span></h2>
 								<img class="thumb tezign" src="https://hanyu-gong.com/pictures/tezign.png">
 							</article>
 						</a>
@@ -132,7 +146,8 @@
                     <li class="project portrait physical loaded" style="position: absolute; left: 297px; top: 835px;">
 						<a >
 							<article>
-								<h2 class="title"><span data-text="wash">Hand-Washing Carnival</span></h2>
+								<h2 class="title"><span data-text="wash" style="color:#FFA7A7;">
+                                    #UX <br><br>#Interactive Environment<br><br>#Physical Prototyping<br><br>#Game Design<br><br>#Hand washing</span></h2>
 								<img class="thumb wash" src="https://hanyu-gong.com/pictures/wash.png">
 							</article>
 						</a>
@@ -140,7 +155,8 @@
 					<li class="project landscape digital loaded" style="position: absolute; left: 297px; top: 626px;">
 						<a >
 							<article>
-								<h2 class="title"><span data-text="infovis">Visualize Epidemics</span></h2>
+								<h2 class="title"><span data-text="infovis" style="color:5A5A5A;">
+                                     #UX<br><br> #Information Visualization <br><br> #Epidemics </span></h2>
 								<img class="thumb infovis" src="https://hanyu-gong.com/pictures/infovis.png">
 							</article>
 						</a>
