--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 			<nav>
 				<ul class="grid" style="position: relative; height: 4176.64px;">
 					<li class="project portrait digital loaded" style="position: absolute; left: 0px; top: 0px;">
-						<a href="https://hanyu-gong.com">
+						<a href="./projects/frog.html">
 							<article>
 								<h2 class="title" >
                                     <span data-text="frogdesign" style="color:#77D84A;">
