--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel = "Shortcut Icon" href="https://hanyu-gong.com/pictures/webicon.ico"> 
 	<link rel="manifest" href="site.webmanifest">
 	<link rel="canonical" href="https://hanyu-gong.com">
-    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Oswald|Julius+Sans+One|Prata|Pragati+Narrow" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./style.css">
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-90118229-2"></script>
@@ -71,7 +71,7 @@
                 <img class="logo" src="https://hanyu-gong.com/pictures/logo.svg" >
             </a>
         </h1>
-			<p id="description">I craft both <span data-filter=".digital">online</span> and <span data-filter=".physical">offline</span> experiences to shape the way people interact with the world.</p>
+			<p id="description">I craft both <span data-filter=".digital" >online</span> and <span data-filter=".physical" >offline</span> experiences to shape the way people interact with the world.</p>
             
             <nav>
 				<ul id="links">
@@ -86,7 +86,7 @@
 						</a>
 					</li>
 					<li class="resume">
-						<a class="active" href="./resume.pdf" target="_blank">resume</a>
+						<a class="active" href="./resume.pdf" target="_blank" >resume</a>
 					</li>
 				</ul>
 			</nav>
@@ -116,7 +116,7 @@
 						</a>
 					</li>
 					<li class="project landscape digital loaded" style="position: absolute; left: 297px; top: 208px;">
-						<a href="http://www.hanyu-gong.space/starbucks">
+						<a href="./projects/frog.html">
 							<article>
 								<h2 class="title"><span data-text="starbucks" style="color:#09B458;">
                                     #UX/CX  <br><br> #Starbuck Experience <br><br> #Kiosk </span></h2>
@@ -153,7 +153,7 @@
 						</a>
 					</li>
 					<li class="project landscape digital loaded" style="position: absolute; left: 297px; top: 626px;">
-						<a >
+						<a href="http://www.hanyu-gong.space/infovis">
 							<article>
 								<h2 class="title"><span data-text="infovis" style="color:5A5A5A;">
                                      #UX<br><br> #Information Visualization <br><br> #Epidemics </span></h2>
