--- a/projects/frog.html
+++ b/projects/frog.html
@@ -42,11 +42,13 @@
 
 				<div class="inner">
                      <a href="../index.html">
-                      <img class="logo" src="images/home.svg" ></a>
+                      <img class="logo" src="images/icon.svg" ></a>
 
 					<nav>
 						<ul>
 							<li><a href="#intro">Overview</a></li>
+                            <br><br><br><br>
+                            <br><br>
 <!--
 							<li><a href="#one">Experience</a></li>
 							<li><a href="#two">Takeaways</a></li>
@@ -68,14 +70,14 @@
 							
                         <article class="large-containter">
                             <img src="images/frog_cover.jpg" width=838px>
-                        </article>
+                        </article><br>
                         <table>
                             <tbody><tr>
-                                <th>Duration</th>
+                                <th style="color: #77D84A">Duration</th>
                                  <td>May 2018 - Sept 2018</td>
                                         </tr>
                                         <tr>
-                                <th>Position</th>
+                                <th style="color: #77D84A">Position</th>
                                  <td>Interaction Designer Intern</td>
                                         </tr>
 
