--- a/projects/challenge.html
+++ b/projects/challenge.html
@@ -32,7 +32,7 @@
 
 				<div class="inner">
                      <a href="../index.html">
-                      <img class="logo" src="images/home.svg" href="../index.html"></a>
+                      <img class="logo" src="images/icon.svg" href="../index.html"></a>
 
 					<nav>
 						<ul>
