--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 						</a>
 					</li>
 					<li class="project landscape digital loaded" style="position: absolute; left: 297px; top: 208px;">
-						<a href="./projects/frog.html">
+						<a href="./projects/starbucks.html">
 							<article>
 								<h2 class="title"><span data-text="starbucks" style="color:#09B458;">
                                     #UX/CX  <br><br> #Starbuck Experience <br><br> #Kiosk </span></h2>
