--- a/projects/frog.html
+++ b/projects/frog.html
@@ -69,7 +69,7 @@
 							<h1 style="color: #77D84A">Intern at frog</h1>
 							
                         <article class="large-containter">
-                            <img src="images/frog_cover.jpg" width=838px>
+                            <img src="images/frog_cover.jpg" width=100%>
                         </article><br>
                         <table>
                             <tbody><tr>
