--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="description" content=" An observer, a traveler, and of course, a designer.">
  	<meta name="robots" content="noarchive"> 	
-	<meta property="og:title" content="Hanyu Gong | Design for changes">      
+	<meta property="og:title" content="Hanyu Gong | Be Boundless">      
 	<meta property="og:description" content="An observer, a traveler, and of course, a designer.">
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://hanyu-gong.com">	
@@ -16,7 +16,7 @@
     <link rel = "Shortcut Icon" href="https://hanyu-gong.com/pictures/webicon.ico"> 
 	<link rel="manifest" href="site.webmanifest">
 	<link rel="canonical" href="https://hanyu-gong.com">
-    <link href="https://fonts.googleapis.com/css?family=Oswald|Julius+Sans+One|Prata|Pragati+Narrow" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Oswald|Julius+Sans+One|Prata|Pragati+Narrow|Nanum+Myeongjo" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./style.css">
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-90118229-2"></script>
@@ -257,7 +257,6 @@
         });
     </script>
     
-	<script src="https://www.google-analytics.com/analytics.js" async="" defer=""></script>
 
 </body>
 </html>
