--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 						</a>
 					</li>
 					<li class="project portrait business loaded" style="position: absolute; left: 0px; top: 417px;">
-						<a href="http://www.hanyu-gong.space/tezignstartuptoolkit">
+						<a href="./projects/Tezign.html">
 							<article>
 								<h2 class="title"><span data-text="tezign" style="color:#34E7C8;">
                                     #Internship <br><br> #UX<br><br> #To-Business <br><br> #Mobile <br><br> #Tezign</span></h2>
