--- a/projects/Tezign.html
+++ b/projects/Tezign.html
@@ -14,6 +14,7 @@
     <link rel = "Shortcut Icon" href="../pictures/webicon.ico"> 
 	<link rel="manifest" href="site.webmanifest">
 	<link rel="canonical" href="https://hanyu-gong.com">
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Oswald|Julius+Sans+One|Prata|Pragati+Narrow|Nanum+Myeongjo" rel="stylesheet">
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="./assets/css/tezign.css" >
@@ -214,13 +215,13 @@
                 </div>
 				<div class="inner">
 					<ul class="menu" >
-                      <p style="padding:0em 0em 0em 0em; text-align: center; color:#fff">Designed and Coded by Hanyu Gong @ Atlanta, 2018</p>
+                      <p style="padding:0em 0em 0em 0em; text-align: center; color:#3FF3D4">Designed and Coded by Hanyu Gong @ Atlanta, 2018</p>
 						<ul>
-                            <li style="text-align: center">
-                                <a href="https://www.linkedin.com/in/hanyu-gong/">
-                        <i class="fa fa-linkedin-square"style="font-size:24px; color: #fff"></i></a>
-                    <a href=""> 
-                        <i class="fa fa-facebook-square" style="font-size:24px; color:#fff"></i></a></li>
+                           <li style="text-align: center">
+                                <a href="mailto:hanyu.clara.gong@gmail.com"> <i class="material-icons" style="vertical-align: middle;color: #3FF3D4">email</i></a>
+                            <a href="https://www.linkedin.com/in/hanyu-gong/" target="_blank">
+                            <i class="fa fa-linkedin-square"style="font-size:24px;vertical-align: middle;color: #3FF3D4"></i></a>
+                       <a href="https://www.instagram.com/aralchanyu/" target="_blank"> <i class="fa fa-instagram" style="font-size:24px;vertical-align: middle;color: #3FF3D4"></i></a></li>
                     </ul>
 					</ul>
 				</div>
