--- a/projects/frog.html
+++ b/projects/frog.html
@@ -14,6 +14,7 @@
     <link rel = "Shortcut Icon" href="../pictures/webicon.ico"> 
 	<link rel="manifest" href="site.webmanifest">
 	<link rel="canonical" href="https://hanyu-gong.com">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
    <link href="https://fonts.googleapis.com/css?family=Oswald|Julius+Sans+One|Prata|Pragati+Narrow|Nanum+Myeongjo" rel="stylesheet">
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="./assets/css/main.css" />
@@ -72,7 +73,7 @@
 
                                     </tbody>
                             </table>
-                            <p>I was super lucky to join <a href="https://www.frogdesign.com/" >frog</a>
+                            <p>I was super lucky to join <a href="https://www.frogdesign.com/" target="_blank">frog</a>
 							as an Interaction Design Intern from May - Sept 2018. It's been a great pleasure working and having fun with frog from different studios. </p>
                             <p>Due to the Non-Disclosure Agreement, I am not supposed to share project details and client information, but I am trying really hard to summarize my learnings and thoughts during the past four months.</p>
                             <br>
@@ -93,7 +94,8 @@
                         <li ><img src="../pictures/challenge_hover.png" width="30%" ></li></a>
                          <a href="./starbucks.html">
                            <li ><img src="../pictures/starbucks_hover.png" width="30%"></li></a>
-                        <li ><img src="../pictures/tezign_small.png" width="30%" ></li>
+                        <a href="./Tezign.html">
+                            <li ><img src="../pictures/tezign_small.png" width="30%" ></li></a>
                         
                 </ul></nav>
                
@@ -114,8 +116,12 @@
 				<div class="inner">
 					<ul class="menu" >
                       <p style="padding:0em 0em 0em 0em; text-align: center">Designed and Coded by Hanyu Gong @ Atlanta, 2018</p>
-						<ul><li style="text-align: center"><a href="https://www.linkedin.com/in/hanyu-gong/"><i class="fa fa-linkedin-square"style="font-size:24px"></i></a>
-                       <a href=""> <i class="fa fa-facebook-square" style="font-size:24px"></i></a></li></ul>
+						<ul style="list-style: none">
+                            <li style="text-align: center">
+                                <a href="mailto:hanyu.clara.gong@gmail.com"> <i class="material-icons" style="vertical-align: middle">email</i></a>
+                            <a href="https://www.linkedin.com/in/hanyu-gong/" target="_blank">
+                            <i class="fa fa-linkedin-square"style="font-size:24px;vertical-align: middle"></i></a>
+                       <a href="https://www.instagram.com/aralchanyu/" target="_blank"> <i class="fa fa-instagram" style="font-size:24px;vertical-align: middle"></i></a></li></ul>
 					</ul>
 				</div>
 			</footer>
