--- a/projects/frog.html
+++ b/projects/frog.html
@@ -2,15 +2,10 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>Hanyu Gong | Design for changes</title>		
+	<title>Hanyu Gong | Be Boundless </title>		
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="description" content=" An observer, a traveler, and of course, a designer.">
  	<meta name="robots" content="noarchive"> 	
-	<meta property="og:title" content="Hanyu Gong | Be Boundless">      
-	<meta property="og:description" content="An observer, a traveler, and of course, a designer.">
-	<meta property="og:type" content="website">
-	<meta property="og:url" content="https://hanyu-gong.com">	
-	<meta property="og:site_name" content="Hanyu Gong">
     <link rel = "Shortcut Icon" href="../pictures/webicon.ico"> 
 	<link rel="manifest" href="site.webmanifest">
 	<link rel="canonical" href="https://hanyu-gong.com">
