--- a/projects/challenge.html
+++ b/projects/challenge.html
@@ -54,7 +54,7 @@
 							<h1 style="color: #FFD704">Rehearsal Space Reservation</h1>
 							
                         <div class="container">
-                            <img src="./images/challenge_cover.jpg" width=100%>
+                            <img src="./images/challenge_cover.gif" width=100%>
                         </div>
                         <table>
                             <tbody>
