--- a/projects/starbucks.html
+++ b/projects/starbucks.html
@@ -89,7 +89,7 @@
                             </table>
                             <br>
                         <div class="container">
-                            <img class="image" src="./images/starbucks/process.svg" width=100% ></div><br>
+                            <img class="image" src="./images/starbucks/process.png" width=100% ></div><br>
                         <br>
                             <br>
                         <h2 style="font-family: 'Quarto-Bold'; color: #000; text-align: center">" Transforming in-store ordering experience at Starbucks "</h2> 
