--- a/projects/Tezign.html
+++ b/projects/Tezign.html
@@ -200,8 +200,8 @@
                         </div>
                         
                          <div class="navigation" style="float:right;" >
-                            <a href="./Tezign.html">
-                                <span class="hide">Reservation</span>
+                            <a href="./plantism.html">
+                                <span class="hide">Plantism</span>
                                 <span class="before">Next&nbsp;</span>
                                 <span class="shift" >
                                 &raquo;</span>
