--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 								</a>
 								<h2 class="title">
 									<a>Internship</a><br>
-                                    <a>Startup</a>
+                                    <a>Startup Tool</a>
 								</h2>
 							</div>
                             
@@ -164,6 +164,10 @@
 								<a href="projects/plantism.html">
 									<img src="pictures/plantism.png" alt="" onMouseOver="this.src='pictures/plantism_hover.png'" onMouseOut="this.src='pictures/plantism.png'">
 								</a>
+                                <h2 class="title">
+									<a>IoT</a><br>
+                                    <a>Plants Keeper</a>
+								</h2>
 							</div>
                             
 							<div class="project-item">
