--- a/projects/Tezign.html
+++ b/projects/Tezign.html
@@ -23,7 +23,7 @@
 	<body style="background-color:#1A2E35">
 
         <!-- Preload -->
-		<div id="preload">
+		<div class="preload">
 			<div class="kd-bounce">
 				<div></div>
 				<div></div>
