--- a/projects/challenge.html
+++ b/projects/challenge.html
@@ -23,7 +23,7 @@
 	<body>
 
          <!-- Preload -->
-		<div id="preload">
+		<div class="preload">
 			<div class="kd-bounce">
 				<div></div>
 				<div></div>
