--- a/projects/epidemics.html
+++ b/projects/epidemics.html
@@ -9,7 +9,7 @@
     <link rel = "Shortcut Icon" href="../pictures/webicon.ico"> 
 	<link rel="manifest" href="site.webmanifest">
 	<link rel="canonical" href="https://hanyu-gong.com">
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Julius+Sans+One|Prata|Pragati+Narrow|Nanum+Myeongjo|Crimson+Text" rel="stylesheet">
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="./assets/css/dark.css" >
@@ -23,7 +23,7 @@
 	<body style="background-color:#000">
 
          <!-- Preload -->
-		<div id="preload">
+		<div class="preload">
 			<div class="kd-bounce">
 				<div></div>
 				<div></div>
