--- a/projects/frog.html
+++ b/projects/frog.html
@@ -18,7 +18,7 @@
 </head>
 	<body>
         <!-- Preload -->
-		<div id="preload">
+		<div class="preload">
 			<div class="kd-bounce">
 				<div></div>
 				<div></div>
