--- a/projects/plantism.html
+++ b/projects/plantism.html
@@ -19,7 +19,7 @@
 </head>
 	<body>
          <!-- Preload -->
-		<div id="preload">
+		<div class="preload">
 			<div class="kd-bounce">
 				<div></div>
 				<div></div>
