--- a/aboutme.html
+++ b/aboutme.html
@@ -81,11 +81,14 @@
 								<div class="main-menu">
 									<nav>
 										<ul class="menu-list">
-											<li class="active menu-item-has-children">
+											<li class="menu-item-has-children">
 												<a href="./index.html" style="color: #c2c2c2">Works</a>
 											</li>
-											<li>
-												<a href="aboutme.html" style="color: #000;" >Me</a>
+                                            <li>
+												<a href="playground.html">Playground</a>
+											</li>
+											<li class=active>
+												<a href="aboutme.html" >Me</a>
 											</li>
 <!--
 											<li>
