--- a/projects/starbucks.html
+++ b/projects/starbucks.html
@@ -27,7 +27,7 @@
 			</div>
 		</div>
 		<!-- Preload -->
-        <div class="outer" style="display: none;">
+        <div class="outer">
 		<!-- Sidebar -->
            <div class="back">
                     <a href="../index.html">
@@ -375,12 +375,7 @@
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
-        <script>
-        $(window).load(function(){
-             $('.loader').fadeOut();
-            $(".outer").css("display", "block");
-        });
-    </script>
+
 
 	</body>
 </html>
