--- a/playground/tezign_branding.html
+++ b/playground/tezign_branding.html
@@ -34,10 +34,7 @@
 
 		<!-- Preload -->
 		<div id="preload">
-			<div class="kd-bounce">
-				<div></div>
-				<div></div>
-			</div>
+			<div class="rubik-loader"></div>
 		</div>
 		<!-- Preload -->
 
