--- a/projects/challenge.html
+++ b/projects/challenge.html
@@ -24,10 +24,7 @@
 
          <!-- Preload -->
 		<div class="preload">
-			<div class="kd-bounce">
-				<div></div>
-				<div></div>
-			</div>
+			<div class="rubik-loader"></div>
 		</div>
 		<!-- Preload -->
 		<!-- Sidebar -->
