--- a/projects/starbucks.html
+++ b/projects/starbucks.html
@@ -21,10 +21,7 @@
 	<body>
         <!-- Preload -->
 		<div class="preload">
-			<div class="kd-bounce">
-				<div></div>
-				<div></div>
-			</div>
+			<div class="rubik-loader"></div>
 		</div>
 		<!-- Preload -->
         <div class="outer">
