--- a/projects/frog.html
+++ b/projects/frog.html
@@ -19,10 +19,7 @@
 	<body>
         <!-- Preload -->
 		<div class="preload">
-			<div class="kd-bounce">
-				<div></div>
-				<div></div>
-			</div>
+			<div class="rubik-loader"></div>
 		</div>
 		<!-- Preload -->
 		<!-- Sidebar -->
