--- a/projects/Tezign.html
+++ b/projects/Tezign.html
@@ -185,21 +185,21 @@
             <div class="inner">
                <h3 style="color:#fff; text-align: center">......Explore more projects......</h3><br>
             <div style="float:left;">
-                <a href="./starbucks.html">
+                <a href="./challenge.html">
                    <div class="navigation" style="float:left;">
                              <span class="shift" >
                                 &laquo;</span>
                             <div class="mask"></div>
-                        </div><br><br><p style="font-weight: bold; font-size: .8em; text-align: center; color: #fff">STARBUCKS</p> </a>
+                        </div><br><br><p style="font-weight: bold; font-size: .8em; text-align: center; color: #fff">RESERVATION</p> </a>
                     </div>
                         
             <div style="float:right;">
-                 <a href="./plantism.html">
+                 <a href="./epidemics.html">
                    <div class="navigation" style="float:right;"  >
                              <span class="shift" >
                                 &raquo;</span>
                             <div class="mask"></div>
-                        </div><br><br><p style="font-weight: bold; font-size: .8em; text-align: center;color: #fff">PLANTISM</p></a>
+                        </div><br><br><p style="font-weight: bold; font-size: .8em; text-align: center;color: #fff">EPIDEMICS</p></a>
                     </div>
                 <br><br>
                 </div>
