--- a/projects/Tezign.html
+++ b/projects/Tezign.html
@@ -185,7 +185,7 @@
             <div class="inner">
                <h3 style="color:#fff; text-align: center">......Explore more projects......</h3><br>
             <div style="float:left;">
-                <a href="./challenge.html">
+                <a href="./protected.html">
                    <div class="navigation" style="float:left;">
                              <span class="shift" >
                                 &laquo;</span>
