--- a/projects/plantism.html
+++ b/projects/plantism.html
@@ -276,7 +276,7 @@
                 
                   
             <div style="float:right;">
-                 <a href="./challenge.html">  
+                 <a href="./protected.html">  
                    <div class="navigation" style="float:right;"  >   
                              <span class="shift" >
                                 &raquo;</span>
