--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 							</div>
                             
 							<div class="project-item">
-								<a href="projects/challenge.html">
+								<a href="projects/protected.html">
 									<img src="pictures/challenge.png" alt=""  onMouseOver="this.src='pictures/challenge_hover.png'" onMouseOut="this.src='pictures/challenge.png'">
 								</a>
 								<h2 class="title">
