--- a/projects/protected.html
+++ b/projects/protected.html
@@ -355,7 +355,7 @@
           text-decoration: none;
         }
 
-        a .ui-reset {
+        a .ui-cancel {
           -webkit-appearance: none;
              -moz-appearance: none;
                   appearance: none;
@@ -366,13 +366,13 @@
           right: -11em;
           padding: 1rem;
         }
-        .ui-reset:before {
+        .ui-cancel:before {
           content: 'ｘ';
           color: #AAAFBD;
           font-weight: bold;
           font-size: 1.5rem;
         }
-        .ui-reset:focus {
+        .ui-cancel:focus {
           outline: none;
         }
 
@@ -423,7 +423,7 @@
                     <input type="password" name="" id="" class="ui-password-input" placeholder="the password is password" />
                   </div>
                   <button class="ui-submit">Submit</button>
-                  <a href="../index.html"><button class="ui-reset" type="button" title="Reset"></button> </a>
+                  <a href="../index.html"><button class="ui-cancel" type="button" title="Cancel"></button> </a>
                     <br>
                    
                 </form>
