--- a/projects/frog.html
+++ b/projects/frog.html
@@ -145,12 +145,12 @@
                 
                   
             <div style="float:right;">
-                 <a href="./starbucks.html">  
+                 <a href="./plantism.html">  
                    <div class="navigation" style="float:right;"  >   
                              <span class="shift" >
                                 &raquo;</span>
                             <div class="mask"></div>
-                        </div><br><br><p style="font-weight: bold; font-size: .8em; text-align: center">STARBUCKS</p> </a>
+                        </div><br><br><p style="font-weight: bold; font-size: .8em; text-align: center">PLANTISM</p> </a>
                     </div>
                <br><br>
                 </div>
