--- a/projects/protected.html
+++ b/projects/protected.html
@@ -429,12 +429,12 @@
                 </form>
             <footer id="footer" class="wrapper style1-alt">
 				 <div style="float:left;">
-                <a href="./plantism.html">
+                <a href="./intercept.html">
                    <div class="navigation" style="float:left;">
                              <span class="shift" >
                                 &laquo;</span>
                             <div class="mask"></div>
-                        </div><br><br><p style="font-weight: bold; font-size: .8em; text-align: center">PLANTISM</p> </a>
+                        </div><br><br><p style="font-weight: bold; font-size: .8em; text-align: center">INTERCEPT</p> </a>
                     </div>
                 
                   
