--- a/projects/plantism.html
+++ b/projects/plantism.html
@@ -266,12 +266,12 @@
             <div class="inner">
             <h3>......Explore more projects......</h3><br>
             <div style="float:left;">
-                <a href="./starbucks.html">
+                <a href="./venmo.html">
                    <div class="navigation" style="float:left;">
                              <span class="shift" >
                                 &laquo;</span>
                             <div class="mask"></div>
-                        </div><br><br><p style="font-weight: bold; font-size: .8em; text-align: center">STARBUCKS</p> </a>
+                        </div><br><br><p style="font-weight: bold; font-size: .8em; text-align: center">VENMO</p> </a>
                     </div>
                 
                   
