--- a/projects/Tezign.html
+++ b/projects/Tezign.html
@@ -194,12 +194,12 @@
                     </div>
                         
             <div style="float:right;">
-                 <a href="./epidemics.html">
+                 <a href="./frog.html">
                    <div class="navigation" style="float:right;"  >
                              <span class="shift" >
                                 &raquo;</span>
                             <div class="mask"></div>
-                        </div><br><br><p style="font-weight: bold; font-size: .8em; text-align: center;color: #fff">EPIDEMICS</p></a>
+                        </div><br><br><p style="font-weight: bold; font-size: .8em; text-align: center;color: #fff">FROG</p></a>
                     </div>
                 <br><br>
                 </div>
