--- a/projects/challenge.html
+++ b/projects/challenge.html
@@ -242,12 +242,12 @@
             <div class="inner">
             <h3>......Explore more projects......</h3><br>
             <div style="float:left;">
-                <a href="./intercept.html">
+                <a href="./epidemics.html">
                    <div class="navigation" style="float:left;">
                              <span class="shift" >
                                 &laquo;</span>
                             <div class="mask"></div>
-                        </div><br><br><p style="font-weight: bold; font-size: .8em; text-align: center">INTERCEPT</p> </a>
+                        </div><br><br><p style="font-weight: bold; font-size: .8em; text-align: center">EPIDEMICS</p> </a>
                     </div>
                 
                   
