--- a/projects/epidemics.html
+++ b/projects/epidemics.html
@@ -189,21 +189,21 @@
             <div class="inner">
             <h3 style="color:#fff; text-align: center">......Explore more projects......</h3><br>
             <div style="float:left;">
-                <a href="./Tezign.html">
+                <a href="./intercept.html">
                    <div class="navigation" style="float:left;">
                              <span class="shift" >
                                 &laquo;</span>
                             <div class="mask"></div>
-                        </div><br><br><p style="font-weight: bold; font-size: .8em; text-align: center; color: #fff">TEZIGN</p> </a>
+                        </div><br><br><p style="font-weight: bold; font-size: .8em; text-align: center; color: #fff">INTERCEPT</p> </a>
                     </div>
                         
             <div style="float:right;">
-                 <a href="./frog.html">
+                 <a href="./challenge.html">
                    <div class="navigation" style="float:right;"  >
                              <span class="shift" >
                                 &raquo;</span>
                             <div class="mask"></div>
-                        </div><br><br><p style="font-weight: bold; font-size: .8em; text-align: center;color: #fff">FROG</p></a>
+                        </div><br><br><p style="font-weight: bold; font-size: .8em; text-align: center;color: #fff">RESERVATION</p></a>
                     </div>
                 <br><br><br>
                 </div>
