--- a/projects/plantism.html
+++ b/projects/plantism.html
@@ -15,7 +15,13 @@
     <link rel="stylesheet" href="./assets/css/main.css" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-        <!-- loader -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-90118229-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-90118229-2');
+    </script>
 </head>
 	<body>
          <!-- Preload -->
