--- a/aboutme.html
+++ b/aboutme.html
@@ -105,7 +105,9 @@
 										<i class="fa fa-dribbble"></i>
 									</a>
 -->
-
+                                    <a href="mailto: hanyu.clara.gong@gmail.com" target="_blank" title="Email">
+										<i class="fa fa-envelope-square"></i>
+									</a>
 									<a href="https://www.instagram.com/aralchanyu/" target="_blank" title="Instagram">
 										<i class="fa fa-instagram"></i>
 									</a>
