--- a/index.html
+++ b/index.html
@@ -151,13 +151,12 @@
 								</h2>
 							</div>
                             
-                            
-                             <div class="project-item">
+                            <div class="project-item" data-text="venmo">
 								<a href="projects/venmo.html">
 									<img src="pictures/venmo.png" alt="" onMouseOver="this.src='pictures/venmo_hover.png'" onMouseOut="this.src='pictures/venmo.png'">
 								</a>
-                                <h2 class="title">
-									<a>Redesign</a><br>
+								<h2 class="title">
+									<a>Case Study</a><br>
                                     <a>Venmo Transaction</a>
 								</h2>
 							</div>
