--- a/projects/venmo.html
+++ b/projects/venmo.html
@@ -25,6 +25,9 @@
 
 </head>
 	<body>
+        <div class="preload">
+			<div class="rubik-loader"></div>
+		</div>
         
 		<!-- Sidebar -->
          <div class="back">
