--- a/projects/epidemics.html
+++ b/projects/epidemics.html
@@ -194,12 +194,12 @@
             <div class="inner">
             <h3 style="color:#fff; text-align: center">......Explore more projects......</h3><br>
             <div style="float:left;">
-                <a href="./intercept.html">
+                <a href="./plantism.html">
                    <div class="navigation" style="float:left;">
                              <span class="shift" >
                                 &laquo;</span>
                             <div class="mask"></div>
-                        </div><br><br><p style="font-weight: bold; font-size: .8em; text-align: center; color: #fff">INTERCEPT</p> </a>
+                        </div><br><br><p style="font-weight: bold; font-size: .8em; text-align: center; color: #fff">PLANTISM</p> </a>
                     </div>
                         
             <div style="float:right;">
